[package]
name = "rtlsdr_mt"
version = "2.0.1"
authors = ["Mick Koch <mick@kochm.co>"]
description = "High-level, multithreading interface to RTL-SDR"
license = "GPL-2.0+"
documentation = "https://kchmck.github.io/doc/rtlsdr_mt/"
repository = "https://github.com/kchmck/rtlsdr_mt.rs"
keywords = ["rtl-sdr", "rtlsdr", "librtlsdr", "threading", "multithreading"]

[dependencies]

libc = "0.2.8"
rtlsdr_sys = "1.1.0"
